--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "For CD's JavaScript exercise.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "node_modules/mocha/bin/mocha --recursive"
   },
-  "author": "Jing Chai <jingweichai@gmail.com>"
+  "author": "Jing Chai <jingweichai@gmail.com>",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.0.0"
+  }
 }
