Add Node.js version requirement.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "chai-jpmc-digital",
   "version": "1.0.0",
   "description": "For CD's JavaScript exercise.",
+  "engines": {
+    "node": ">=8.9.4"
+  },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha --recursive"
   },
